updated js out about

--- a/outabout/test.html
+++ b/outabout/test.html
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <script src="outAboutNew.js"></script>
+    <script src="outAbout1JSON.js"></script>
     <title>Out &amp; About</title>
 </head>
 
@@ -107,8 +107,8 @@
             </div>
         </div>
     </div>
-    <div id="left"></div>
-    <div id="right"></div>
+    <div id="pageDiv"></div>
+
 </body>
 
 </html>
