--- a/outabout/test.html
+++ b/outabout/test.html
@@ -20,11 +20,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <script src="outAbout1JSON.js"></script>
+    <script src="outAbout1JSON.js" defer></script>
     <title>Out &amp; About</title>
 </head>
 
-<body onload="buildContent()">
+<body>
 
     <div class="fixed-top">
         <div class="headerName">
@@ -34,7 +34,7 @@
             <div class="container-fluid">
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="#pageTop">
                             <i class="fas fa-home fa-lg"></i>
                         </a>
                     </li>
@@ -95,7 +95,7 @@
 
     <div style="margin-top:186px">
     </div>
-    <span id="#"></span>
+    <span id="pageTop"></span>
     <div class="evenSection container-fluid">
         <div class="row page-header">
             <div class="col-md-3">
