--- a/outabout/outAboutHardCoded.html
+++ b/outabout/outAboutHardCoded.html
@@ -20,7 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
     <!-- Latest compiled JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
-    <script src="outAbout1JSON.js" defer></script>
+    <script src="outAbout.js"></script>
     <title>Out &amp; About</title>
 </head>
 
@@ -34,7 +34,7 @@
             <div class="container-fluid">
                 <ul class="nav navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#pageTop">
+                        <a class="nav-link" href="#">
                             <i class="fas fa-home fa-lg"></i>
                         </a>
                     </li>
@@ -95,7 +95,7 @@
 
     <div style="margin-top:186px">
     </div>
-    <span id="pageTop"></span>
+    <span id="#"></span>
     <div class="evenSection container-fluid">
         <div class="row page-header">
             <div class="col-md-3">
@@ -107,8 +107,68 @@
             </div>
         </div>
     </div>
-    <div id="pageDiv"></div>
 
+    <span id="Minneapolis"></span>
+    <div class="oddSection container-fluid">
+        <div class="row">
+            <div class="col-md-4">
+                <h4> Minneapolis, MN</h4>
+                <img src="https://lonelyplanetimages.imgix.net/a/g/hi/t/f293dd42212a83f15527f881126a5f16-minneapolis.jpg?sharp=10&vib=20&w=1200"
+                    class="img-thumbnail" alt="Cinque Terre" width="304" height="236">
+            </div>
+            <div class="col-md-8">
+                <dl>
+                    <dt>Breakfast</dt>
+                    <dd>Hen House Eatery</dd>
+                    <dt>Morning</dt>
+                    <dd>Walk or bike around the chain of lakes</dd>
+                    <dt>Lunch</dt>
+                    <dd>Naf Naf Grill - massive lines amazing rice bowls and pitas 
+                            <a href="https://nafnafgrill.com/">
+                                <i class="far fa-arrow-alt-circle-right"></i>
+                            </a>
+                    </dd>
+                    <dt>Afternoon</dt>
+                    <dd>Skyline mini golf at the Walker Art Center
+                        <a href="https://walkerart.org/calendar/2018/skyline-mini-golf-2018">
+                            <i class="far fa-arrow-alt-circle-right"></i>
+                        </a>
+                    </dd>
+                    <dt>Drinks</dt>
+                    <dd>Tattersall Distilling
+                        <a href=" https://tattersalldistilling.com/">
+                            <i class="far fa-arrow-alt-circle-right"></i>
+                        </a>
+                    </dd>
+                    <dt>Dinner</dt>
+                    <dd>Bar La Grassa - amazing homemade pasta. Everytime I'm back in town I get papparadelle with veal ragu!
+                        Smaller parties can get away with walking in and sitting in the bar area, but if you have a larger
+                        group a reservation is necessary.
+                        <a href="http://www.barlagrassa.com/">
+                            <i class="far fa-arrow-alt-circle-right"></i>
+                        </a>
+                    </dd>
+                </dl>
+            </div>
+        </div>
+    </div>
+
+    <span id="Monterey"></span>
+    <div class="evenSection container-fluid">
+        This will be some stuff about Monterey.
+    </div>
+
+    <span id="Augusta"></span>
+    <div class="oddSection container-fluid">
+        <div>
+            This will be some stuff about Augusta.
+        </div>
+    </div>
+
+    <span id="connect"></span>
+    <div class="evenSection container-fluid">
+        This will be some stuff about Connect.
+    </div>
 </body>
 
 </html>
